--- a/templates/default/hosts.erb
+++ b/templates/default/hosts.erb
@@ -1,5 +1,15 @@
-# Dropped off by Chef for <%= @node[:fqdn] %>
+# Dropped off by Chef for <%= node[:fqdn] %>
 127.0.0.1     localhost localhost.localdomain
+127.0.0.1 <%= node[:fqdn] %>
+
 <% @host_entries.each do |entry| %>
-<%= entry %> 
+  <%= entry %>
 <% end %>
+
+# The following lines are desirable for IPv6 capable hosts
+::1 ip6-localhost ip6-loopback
+fe00::0 ip6-localnet
+ff00::0 ip6-mcastprefix
+ff02::1 ip6-allnodes
+ff02::2 ip6-allrouters
+ff02::3 ip6-allhosts
