--- a/templates/default/hosts.erb
+++ b/templates/default/hosts.erb
@@ -13,3 +13,8 @@ ff00::0 ip6-mcastprefix
 ff02::1 ip6-allnodes
 ff02::2 ip6-allrouters
 ff02::3 ip6-allhosts
+
+# DATABASE INSTANCES
+<% @database_hosts_entries.each do |entry| %>
+  <%= entry %>
+<% end %>
